# mgnify-wasm-preprocess

./: Cargo.toml  README.md
examples/: gen_references.rs
src/: decompress.rs  htslib.rs  lib.rs
src/htslib/: bgzf.rs  faidx.rs  tabix.rs
tests/: generate_references.sh  integration_test.rs
tests/fixtures/: test.fasta
tests/fixtures/reference/: BU_ATCC8492.fasta.bgz.gzi  BU_ATCC8492.gff3.bgz.csi  test.fasta.bgz.fai  test.fasta.bgz.gzi  test.gff3.bgz.csi  test.gff3.bgz.tbi
