[package]
name = "mgnify-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly
js-sys                   = {version = "0.3.51"}
wasm-bindgen             = {version = "0.2"   }
simple-error             = {version = "0.2"   }
console_error_panic_hook = {version = "0.1.7" }
wasm-bindgen-file-reader = {version = "1"     }
seq_io                   = {version = "0.3.2" }
web-sys                  = {version = "0.3.77", features = ["Blob", "console", "Document", "Element", "HtmlCanvasElement", "HtmlImageElement", "Response", "Window"]}
json                     = {version = "0.12.4"}
flate2                   = {version = "1.0"}
crc32fast                = {version = "1"}
log                      = {version = "0.4.27"}
# flate2    = { version = "1", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
# testing
pretty_assertions = "1.4.1"
stacker = "0.1.20"
flate2 = "1.0"

[[example]]
name = "gen_references"
path = "examples/gen_references.rs"


[profile.release]
lto = true

#[rust]
#lld = true
